# fast-api-template

./: .gitignore  ANALYSIS.md  GEMINI.md  README.md  ex.md  pyproject.toml  test.http
docs/: 00-getting-started.md  01-python-basics-types-variables.md  01-python-basics-types.md  02-python-basics-conditionals.md  02-python-basics-variables.md  03-python-basics-loops.md  03-python-basics-type-checking.md  04-python-basics-type-conversion.md  04-python-functions.md  05-python-basics-conditionals.md  05-python-data-structures-list.md  06-python-basics-logical-operators.md  06-python-data-structures-dict.md  07-python-basics-loops-for.md  07-python-classes-oop.md  08-python-basics-loops-while.md  08-python-modules-import.md  09-python-basics-loops-control.md  09-python-packages.md  10-python-basics-loops-advanced.md  11-python-data-structures-list.md  12-python-data-structures-dict.md  13-python-functions-basics.md  14-python-functions-parameters.md  15-python-functions-lambda.md  16-python-functions-scope.md  17-python-functions-documentation.md  18-python-classes-basics.md  19-python-classes-variables.md  20-python-classes-methods.md  21-python-classes-inheritance.md  22-python-classes-special-methods.md  23-python-classes-encapsulation.md  24-python-modules-basics.md  25-python-modules-builtin.md  26-python-modules-advanced.md  27-python-packages-basics.md  28-python-packages-advanced.md
notebooks/: 01-python-basics-types-variables.ipynb  01-python-basics-types.ipynb  02-python-basics-conditionals.ipynb  02-python-basics-variables.ipynb  03-python-basics-loops.ipynb  (+30 more)
(+36 files in other folders)
